--- a/conf/config_hw1_DAg_ant.yaml
+++ b/conf/config_hw1_DAg_ant.yaml
@@ -1,9 +1,9 @@
 env:
-  expert_policy_file: ../../../hw1/roble/policies/experts/Humanoid.pkl # Relative to where you're running this script from
-  expert_data: ../../../hw1/roble/expert_data/expert_data_Humanoid-v2.pkl  # Relative to where you're running this script from
-  expert_unlabelled_data: ../../../hw1/roble/expert_data/unlabelled/unlabelled_data_Humanoid-v2.pkl  # Relative to where you're running this script from
-  exp_name: "Humanoid-v2-DAg"
-  env_name: Humanoid-v2 # choices are [Ant-v2, Humanoid-v2, Walker2d-v2, HalfCheetah-v2, Hopper-v2]
+  expert_policy_file: ../../../hw1/roble/policies/experts/Ant.pkl # Relative to where you're running this script from
+  expert_data: ../../../hw1/roble/expert_data/expert_data_Ant-v2.pkl  # Relative to where you're running this script from
+  expert_unlabelled_data: ../../../hw1/roble/expert_data/unlabelled/unlabelled_data_Ant-v2.pkl  # Relative to where you're running this script from
+  exp_name: "q2-2_dag_ant"
+  env_name: Ant-v2 # choices are [Ant-v2, Humanoid-v2, Walker2d-v2, HalfCheetah-v2, Hopper-v2]
   max_episode_length: 1000
   render: true
 
@@ -11,7 +11,7 @@ alg:
   num_rollouts: 5
   train_idm: false
   do_dagger: true
-  num_agent_train_steps_per_iter: 2000 # number of gradient steps for training policy (per iter in n_iter)
+  num_agent_train_steps_per_iter: 1000 # number of gradient steps for training policy (per iter in n_iter)
   num_idm_train_steps_per_iter: 1100
   n_iter: 5
   batch_size: 1000 # training data collected (in the env) during each iteration
@@ -25,7 +25,7 @@ alg:
   ac_dim: 0 ## This will be overridden in the code
   ob_dim: 0 ## This will be overridden in the code
   network:
-    layer_sizes: [64, 64] #[128, 128] # [64, 32]
+    layer_sizes: [64, 32] #[128, 128] # [64, 32]
     activations: ["tanh", "tanh"]
     # activations: ["relu", "relu"]
     output_activation: "identity"
