--- a/conf/config_hw4.yaml
+++ b/conf/config_hw4.yaml
@@ -4,23 +4,32 @@ env:
     max_episode_length: 500
     exp_name: 'todo'
     atari: True
-    goal_indicies: [0,1]
-    uniform_bounds: [[-4,-4], [20,4]]
-    gaussian_bounds: [[0,8], [4,4]]
+    # goal_indicies: [0,1]
+    # uniform_bounds: [[-4,-4], [20,4]]
+    # gaussian_bounds: [[0,8], [4,4]]
+    # k: 15
+    uniform_bounds: [[-0.6, -1.4, -0.4], [0.8, 0.2, 0.5]]
+    gaussian_bounds: [[ 0.2, -0.7, 0.0], [0.3, 0.4, 0.05]]
+    goal_dist: uniform
+    goal_indicies: [-6, -5, -4]
+    goal_reached_threshold: -0.3
+    goal_rep: 'absolute'
     k: 15
+    goal_frequency: 15
+    low_level_policy_path: null
 
 alg:
     double_q: True
     batch_size: 4096 ## The min amount of experience to collect before a training update
     train_batch_size: 4096 ## training batch size used for computing gradients of q function or policy
     eval_batch_size: 4096 ## How much experience should be collected over the environment to evaluate the average reward of a policy
-    num_agent_train_steps_per_iter: 1 ## Number of training updates after #batch_size experience is collected. 
+    num_agent_train_steps_per_iter: 1 ## Number of training updates after #batch_size experience is collected.
     num_critic_updates_per_agent_update: 16 ## Number of training updates after #batch_size experience is collected.
     use_gpu: False
     gpu_id: 0
     rl_alg: 'pg' ## RL training algorithm ['ddpg', 'td3', 'sac','pg']
     learning_starts: 1024  ## How much initial experience to collect before training begins
-    learning_freq: 1 
+    learning_freq: 1
     target_update_freq: 1
     exploration_schedule: 0
     optimizer_spec:  0
@@ -36,12 +45,13 @@ alg:
     grad_norm_clipping: True
     n_iter: 10000
     polyak_avg: 0.01 #
-    td3_target_policy_noise: 0.1 #
+    td3_target_policy_noise: 0.05 #
+    td3_target_policy_noise_clip: 0.1 #
     sac_entropy_coeff: 0.2
     policy_std: 0.05
     use_baseline: True
     gae_lambda: 0.9
-    standardize_advantages: True 
+    standardize_advantages: True
     reward_to_go: False
     nn_baseline: True
     on_policy: True
@@ -53,9 +63,10 @@ alg:
         output_activation: "identity"
 
 logging:
-    video_log_freq: 100 # How often to generate a video to log/
-    scalar_log_freq: 10 # How often to log training information and run evaluation during training.
-    save_params: false # Should the parameters given to the script be saved? (Always...)
+    video_log_freq: -1 # How often to generate a video to log/
+    scalar_log_freq: 2000 # How often to log training information and run evaluation during training.
+    save_params: true # Should the parameters given to the script be saved? (Always...)
+    save_params_freq: 40000
     random_seed: 1234
     logdir: ""
     debug: false
